# tree-sitter-jinja

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  error.jinja2  example.jinja2  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: package-pypi.yml  publish.yml
bindings/c/: tree-sitter-jinja.pc.in
bindings/c/tree_sitter/: tree-sitter-jinja.h
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jinja/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: kitchen-sink.txt  strings.txt
