[package]
name = "tree-sitter-jinja"
description = "Jinja2 grammar for the tree-sitter parsing library"
version = "0.1.4"
authors = ["Zach Kanzler <they4kman@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "jinja"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/they4kman/tree-sitter-jinja"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
